MTP-261:  fix spacing below h4

--- a/mt-kit/core/css/src/utilities/_mixins.scss
+++ b/mt-kit/core/css/src/utilities/_mixins.scss
@@ -160,6 +160,10 @@
   > h4 {
     margin-top: var(--space-sub-section);
   }
+  > h4 + *,
+  > .h4 + * {
+    margin-top: 0;
+  }
 
   .text {
     @include xp-html-area;
