--- a/src/scss/utilities/_mixins.scss
+++ b/src/scss/utilities/_mixins.scss
@@ -146,6 +146,10 @@
   > h4 {
     margin-top: var(--space-sub-section);
   }
+  > h4 + *,
+  > .h4 + * {
+    margin-top: 0;
+  }
 
   .text {
     @include xp-html-area;
